[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geo = "0.27.0"
geo-types = "0.7.12"
intersect2d = "0.4.2"
itertools = "0.12.0"
line_intersection = "0.4.0"
nohash-hasher = "0.2.0"
num = "0.4.1"
rayon = "1.8.0"
regex = "1.10.2"
rustc-hash = "1.1.0"
